feat: flexbox para las cards

--- a/index.html
+++ b/index.html
@@ -9,20 +9,44 @@
     <title>Media Queries</title>
 </head>
 <body>
-    <div>
-        <nav>Tasse</nav> 
+    <div class="container">
+        <nav>
+            <h2>Tasse</h2>
+            <ul>
+                <p><strong>Inicio</strong></p>
+                <p><strong>Catálogo</strong></p>
+                <p><strong>Ofertas</strong></p>
+                <p><strong>Contacto</strong></p>
+            </ul>
+        </nav> 
         <main class="card">
             <div>
                 <img src="assets/imgs/img1.jpg">
+                <p>Tasse Grafito
+                    <br>
+                    <button>Ver más</button>
+                </p>
             </div>
             <div>
                 <img src="assets/imgs/img2.jpg">
+                <p>Tasse Chocolate
+                    <br>
+                    <button>Ver más</button>
+                </p>
             </div>
             <div>
                 <img src="assets/imgs/img3.jpg">
+                <p>Tasse Conjunto
+                    <br>
+                    <button>Ver más</button>
+                </p>
             </div>
             <div>
                 <img src="assets/imgs/img4.jpg">
+                <p>Tasse Cream
+                    <br>
+                    <button>Ver más</button>
+                </p>
             </div>
         </main> 
         <footer>
