feat: agregando fontawesome

--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/33bf44000f.js" crossorigin="anonymous"></script>
     <title>Media Queries</title>
 </head>
 <body>
+    <section class="filtros">
+        <div>
+            <p>Ordenar por:</p>
+            <select class="opcion">
+                <option value="precio">Precio</option>
+                <option value="nombre">Nombre</option> 
+            </select>
+        </div>
+    </section>
     <div class="container">
         <nav>
+            <div class="logo">
+                <i class="fa-solid fa-mug-saucer" style="color: #ffffff;"></i>
+            </div>
             <h2>Tasse</h2>
             <ul>
                 <p><strong>Inicio</strong></p>
@@ -50,7 +63,7 @@
             </div>
         </main> 
         <footer>
-            <a href="https://www.instagram.com">@tasse_</a>
+            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i>@tasse_</a>
             <p>Todos los derechos reservados</p>
         </footer>
     </div>
