fixed: arreglos desktop y termino desafio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <div class="container">
         <nav class="nav-section">
-            <div class="logos">
                 <div class="logo">
                     <i class="fa-solid fa-mug-saucer" style="color: #ffffff;"></i>
                     <h1>Tasse</h1>
@@ -20,11 +19,11 @@
                 <div class="bars">
                     <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
                 </div>
-            </div>
             <ul>
                 <li>Inicio</li>
                 <li>Ofertas</li>
                 <li>Catálogo</li>
+                <li>Contacto</li>
             </ul>
         </nav> 
         <section class="filtros-section">
@@ -59,6 +58,30 @@
                         <br>
                         <button>Ver más</button>
                 </div>
+                <div class="card">
+                    <img src="assets/imgs/img5.jpg" alt="taza">
+                    <span>Tasse Black</span>
+                        <br>
+                        <button>Ver más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/imgs/img6.jpg" alt="taza">
+                    <span>Tasse Long</span>
+                        <br>
+                        <button>Ver más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/imgs/img7.jpg" alt="taza">
+                    <span>Tasse Conjunto2</span>
+                        <br>
+                        <button>Ver más</button>
+                </div>
+                <div class="card">
+                    <img src="assets/imgs/img8.jpg" alt="taza">
+                    <span>Tasse Rústica</span>
+                        <br>
+                        <button>Ver más</button>
+                </div>
             </div>
             <div class="navegador">
                 <button>...</button>
@@ -77,7 +100,7 @@
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </div>
-            <span>Todos los derechos reservados</span>
+            <span><strong>Todos los derechos reservados</strong></span>
         </footer>
     </div>
 </body>
